@@ -255,11 +255,7 @@ public class BuilderASTTransformation extends AbstractASTTransformation implemen
 
         String className = strategyClass.getName();
         try {
-            Object instance = loader.loadClass(className).newInstance();
-            if (instance == null) {
-                addError("Can't load builderStrategy '" + className + "'", anno);
-                return null;
-            }
+            Object instance = loader.loadClass(className).getDeclaredConstructor().newInstance();
             if (!BuilderStrategy.class.isAssignableFrom(instance.getClass())) {
                 addError("The builderStrategy class '" + strategyClass.getName() + "' on " + MY_TYPE_NAME + " is not a builderStrategy", anno);
                 return null;
